@@ -4,6 +4,9 @@
 
 *** Changes after 2.7 ***
 FEATURE:	Added support for 128x32 SSD1306 based displays
+FIX:		Fixed recursion bug in console history
+FIX:		Multithreading issue with slow window redraws and large images
+FIX:		Ensure valid thread stack sizes on platforms where it matters
 
 
 *** Release 2.7 ***
